@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-12T16:37:09Z",
-  "count_outdated" : 413,
-  "uniques_outdated" : 257,
-  "count" : 445,
+  "timestamp" : "2022-08-13T01:57:21Z",
+  "count_outdated" : 415,
+  "uniques_outdated" : 258,
+  "count" : 446,
   "uniques" : 282,
   "clones" : [
-    {
-      "timestamp": "2022-07-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-03T00:00:00Z",
       "count": 2,
